fix main page bottom block visibility

--- a/wp-content/themes/sixgill/css/custom/desktop_general.css
+++ b/wp-content/themes/sixgill/css/custom/desktop_general.css
@@ -29,10 +29,6 @@
 		margin-top: 10px;
 	}
 
-	.hidden-bottom-imageDiagram {
-		display: none;
-	}
-
 	.logo-sixgill {
 		width:140px;
 		height:111px;
